# jaiabot-hydro

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  annotation_test.py  fleet0-jaia-tech-chain.pem  jaia-fleet1.pem  jaiabot_diving.py  rc_mode_and_dive.py  rest_api-2024-08-09.md  test.py
.circleci/: config.yml
.docker/noble/arm64/: Dockerfile.in
cmake/: ArduinoCompile.cmake  ConfigureDockerfiles.cmake  FindProtobufLocal.cmake  JaiaVersions.cmake
config/ansible/cloud/: create-virtualfleet.yml  update-vfleet.yml
config/ansible/cloud/tasks/: read-ip-addresses.yml
config/ansible/cloud/templates/: cloud-vfleet-user-data.yml.j2  cloud_vfleet_user_data.sh.j2  fleet.cfg.j2
config/ansible/major_upgrade/: major-upgrade.yml
config/ansible/major_upgrade/tasks/: backup-old-rootfs-overlay.yml  check-disk-space.yml  fetch-reuse-files.yml  fetch-version.yml  get-major-version.yml  get-new-filesystems.yml
config/ansible/major_upgrade/templates/: do-major-upgrade.sh.j2
config/ansible/major_upgrade/vars/: disk-space.yml
config/fleet/: .tmp-wg_fleet27.conf  .tmp-wg_fleet3.conf  README.txt  debconf-fleet.sh  jaia-create-fleet-config.sh
config/launch/camera-test/: bot.launch
config/launch/simulation/: bot.launch
config/templates/: link_xbee.pb.cfg.in
config/templates/bot/: _liaison_load.pb.cfg.in  bot-sim.moos.in  jaiabot_driver_camera.pb.cfg.in  jaiabot_health.pb.cfg.in  jaiabot_mission_manager.pb.cfg.in  jaiabot_mission_repeater.pb.cfg.in  jaiabot_simulator.pb.cfg.in
config/templates/hub/: jaiabot_hub_manager.pb.cfg.in
debian/: jaiabot-embedded.config  jaiabot-embedded.install  jaiabot-embedded.postinst  jaiabot-embedded.templates
rootfs/: README.md
rootfs/auto/: config.native  config.qemu  config.virtualbox
rootfs/cloud/aws/: cloud-init-user-data.sh.in  create_vpc.sh  test.sh  vpc.conf
rootfs/customization/hooks/: 04-add-overlay-prompt.chroot
rootfs/customization/includes.chroot/etc/: fstab  issue  overlayroot.conf  resolv.conf.ipv6
rootfs/customization/package-lists/: core.list.chroot
rootfs/nocloud-init/: common-first-boot.yml  configure-wireguard-service-vpn.sh  create-ansible-inventory.sh  first-boot.preseed.yml.ex  install-hub-ssh-keys.sh  standard-user-data.yml  user-data
rootfs/scripts/: create_raspi_base_image.sh  import_vms.sh
rootfs/scripts/includes/: .#import_utils.sh  image_utils.sh  import_utils.sh
scripts/: arm64-deploy.sh  calibrate_atlas_oem.py  calibrate_atlas_oem_ph.py  common-versions.env  docker-arm64-build-and-deploy.sh  docker-arm64-build-and-deploy.sh.bak  docker-create-push-for-circleci.sh  init  jaia-create-fleet-config.sh  jaia-generate-first-boot.py  jaia-ip.py  jaia-vpn-gen.sh  reset-xbee-modem.py  setup-tools-build-docker.sh  setup-tools-build-nodocker.sh
scripts/fleet/: jaia-create-fleet-config.sh  jaia-generate-first-boot.py
scripts/git-hooks/prettier/: write.sh
scripts/log-analysis/: analysis_utils.py  bio_comparison.py
scripts/sim-docker/: #Dockerfile#  .#Dockerfile  Dockerfile.in  README.md  entrypoint.sh  launch-container.sh
src/arduino/jaiabot_runtime/: jaiabot_runtime.ino
src/doc/figures/: .$sensor-mcu-sequence.png.bkp
src/doc/markdown/: page01_main.md  page05_jaia_tool.md  page112_testing_react_web_apps.md  page13_ssh_keys.md  page14_sensors.md  page20_build.md  page25_embedded_setup.md  page61_mission_repeater.md
src/lib/: groups.h
src/lib/comms/xbee/: main.cpp  xbee.cpp  xbee.h  xbee.proto  xbee_driver.cpp  xbee_driver.h
src/lib/liaison/postlaunch/: liaison_jaiabot.h
src/lib/lora/: crc32.h  serial.h  serial_crc32.h
src/lib/messages/: CMakeLists.txt  aml_ct_x2change.proto  camera_driver.proto  edna.proto  engineering.proto  fleet_config.proto  health.proto  imu.proto  jaia_dccl.proto  salinity.proto  xbee_extensions.proto
src/lib/messages/sensor/: atlas_scientific__ezo_ec.proto  catalog.proto  configuration.proto  metadata.proto  sensor_core.proto
src/lib/messages/sensors/: example.proto
src/lib/units/: conductivity.h
src/payload/JAIA_BIO-PAYLOAD/: .cproject  .mxproject  .project  JAIA_BIO-PAYLOAD Debug.launch  JAIA_BIO-PAYLOAD.ioc  STM32L433RCTX_FLASH.ld
src/payload/JAIA_BIO-PAYLOAD/Debug/: JAIA_BIO-PAYLOAD.elf  JAIA_BIO-PAYLOAD.list  JAIA_BIO-PAYLOAD.map  makefile  objects.list
src/payload/bio_payload_board/: JAIA_BIO-PAYLOAD.ioc  usb_reset.py
src/payload/scripts/: bio_payload_build_and_deploy.sh  usb_reset.py
src/python/: CMakeLists.txt  build_venv.sh  requirements.txt
src/python/adafruit/: imu_bno085.py  jaiabot_imu.py
src/python/atlas_scientific_ec_oem/: calibrate_atlas_oem.py  jaiabot_as-ezo-ec.py
src/python/atlas_scientific_ezo_ec/: atlas_oem.py  calibrate_atlas_oem.py  calibrate_atlas_oem_ec.py  calibrate_atlas_oem_ph.py
src/python/camera/: camera_driver.proto  camera_driver.py  camera_driver_pb2.py  compile_messages.sh  grab.sh  jaia_serial.py  push.sh  test_camera_driver.py
src/python/edna/: jaiabot_edna.py
src/python/gps/: gps-spi-pty.py
src/python/jaia_serial/: pyproject.toml  setup.py
src/python/jaia_serial/jaia_serial/: __init__.py
src/python/motor/: rpm.py
src/python/pressure_sensor/: jaiabot_pressure_sensor.py
src/python/pyjaia/: setup.py
src/python/pyjaia/pyjaia/: contours.py  (+1 more)
src/python/pyjaiaprotobuf/: build_messages.sh
src/python/tsys01_temperature_sensor/: jaiabot_tsys01.py
src/test/: CMakeLists.txt
src/test/sensor/: CMakeLists.txt
src/test/sensor/nanopb/: CMakeLists.txt  test.c
src/web/: CMakeLists.txt  README.md  babel.config.js  install_dependencies.sh  jest.config.js  package-lock.json  package.json.in  tsconfig.json  webpack.config.js
src/web/components/: HealthStatusLine.tsx
src/web/jcc/: App.jsx  App.less  App.tsx  index.tsx
src/web/missions/: missions.ts  settings.ts
src/web/shared/: CSVExport.ts  JAIAProtobuf.ts  KMZExport.ts  Styles.ts  TaskPacketFeatures.ts
src/web/style/: util.less
src/web/tests/: jest.setup.js
src/web/types/: commands.ts  jaia-system-types.ts  openlayers-types.ts
src/web/utils/: command.ts  commands.ts  jaia-api.ts  mission-library.ts  protobuf-types.ts  style.ts
(+262 files in other folders)
