[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jaia_serial"
dynamic = ["version"]
description = "Jaia serial pipe for protobuf messages"
license = {text=""}
authors = [
    { name = "Jaia Robotics", email = "edsanville@gmail.com" },
]
dependencies = [
    "wheel",
    "protobuf==3.20.0",
    "pyserial"
]

[project.urls]
Homepage = "https://www.jaia.tech"
